--- a/template/index.html
+++ b/template/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="../reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="../reveal.js/css/theme/blood.css" id="theme">
+		<link rel="stylesheet" href="../reveal.js/css/theme/moon.css" id="theme">
 		<link rel="stylesheet" href="../reveal.js/user/custom.css">
 
 		<!-- Theme used for syntax highlighting of code -->
